<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:id="@+id/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_height="100dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/make_source_report"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:onClick="onMakeSourceReport"
            android:id="@+id/onMakeSourceReport"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />

        <Button
            android:text="@string/make_purity_report"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/makePurityReport"
            android:onClick="onMakePurityReport"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/view_availability"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:onClick="onViewAvailability"
            android:id="@+id/viewAvailability"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />

        <Button
            android:text="@string/historical_reports"
            android:layout_height="wrap_content"
            android:id="@+id/historicalReports"
            android:onClick="historicalReports"
            android:layout_weight="1"
            android:layout_width="190dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:text="@string/manage_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onManageReports"
        android:id="@+id/manageReports"
        android:textSize="12sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/administrate_users"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewUsers"
            android:onClick="onManageUsers"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />

        <Button
            android:text="@string/view_logs"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewLog"
            android:onClick="onViewLogs"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:text="@string/edit_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/editAccount"
        android:onClick="onEditAccount"
        android:textSize="12sp" />

    <Button
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:id="@+id/logout"
        android:onClick="onLogoutPressed"
        android:layout_height="50dp"
        android:textSize="12sp"
        android:elevation="0dp"
        android:backgroundTint="#ff5555" />
</LinearLayout>