<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/real_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/realName"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editRealName" />

        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editUsername" />

        <TextView
            android:text="@string/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oldPassword"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editOldPassword" />

        <TextView
            android:text="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword1" />

        <TextView
            android:text="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password2"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword2" />

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailAddress"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailAddress" />

        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editPhoneNumber" />

        <TextView
            android:text="@string/home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homeAddress"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editHomeAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:onClick="onEditAccount"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1" />

            <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelRegister"
                android:onClick="onCancelEditing"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>