<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:text="@string/pick_water_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waterType"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeSpinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:text="@string/pick_water_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waterCondition"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conditionSpinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:text="@string/choose_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationSpinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="175dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitReport"
            android:onClick="onSubmitReport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelReport"
            android:onClick="onCancelReport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
